cluster/apps/mosquitto/mosquitto/app/network-policies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# CiliumNetworkPolicy for mosquitto
# MQTT broker exposed via LoadBalancer for IoT devices
# Allow MQTT ingress from world (LoadBalancer traffic)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mqtt-ingress
  namespace: mosquitto
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
            - port: "8883"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow MQTT ingress from sungather (internal IoT data collector)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-sungather-ingress
  namespace: mosquitto
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sungather
            k8s:app.kubernetes.io/name: sungather
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
